feat: add transactional and add .toList()